Initial commit: ShitcoinsList.com

--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "nextjs-toploader": "^1.6.4",
-    "react-hot-toast": "^2.4.1",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
-    "node-fetch": "^2.7.0",
-    "react-spring": "^9.7.3",
-    "react-confetti": "^6.1.0",
     "crisp-sdk-web": "^1.0.21",
-    "axios": "^1.6.2",
-    "stripe": "^14.8.0",
     "daisyui": "^4.4.19",
-    "mailgun.js": "^9.3.0",
     "eslint": "^8.55.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "mailgun.js": "^9.3.0",
+    "next": "14.0.4",
+    "nextjs-toploader": "^1.6.4",
+    "node-fetch": "^2.7.0",
+    "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-spring": "^9.7.3",
+    "stripe": "^14.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
