--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
 # Dependencies
-node_modules
-.pnp
+/node_modules
+/.pnp
 .pnp.js
 
 # Testing
-coverage
+/coverage
 
 # Next.js
-.next/
-out/
-build
+/.next/
+/out/
+
+# Production
+/build
 
 # Misc
 .DS_Store
@@ -21,11 +23,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # Local env files
+.env*.local
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # Vercel
 .vercel
+
+# Typescript
+*.tsbuildinfo
+next-env.d.ts
