--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.7.7",
     "chart.js": "^4.4.1",
     "crisp-sdk-web": "^1.0.21",
